--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
 {
   "files.exclude": {
 		".git": true,
-    "**/.DS_Store": true
+    "**/.DS_Store": true,
+    "node_modules": true
 	},
   "jslint.enable": true
 }
